[gd_scene load_steps=16 format=3 uid="uid://jb54q5yqegth"]

[ext_resource type="Script" path="res://Rooms/rNeosStage01.gd" id="1_0xwcg"]
[ext_resource type="PackedScene" uid="uid://byy0nyaw6gtki" path="res://Objects/Room_objects/objMusicPlayer.tscn" id="1_i2umm"]
[ext_resource type="PackedScene" uid="uid://yab7pya0yr1j" path="res://Objects/Room_objects/objCameraFixed.tscn" id="2_33lai"]
[ext_resource type="PackedScene" uid="uid://bm40t36a6m8sc" path="res://Objects/Tiles/til32x32.tscn" id="2_hd0ie"]
[ext_resource type="PackedScene" uid="uid://bp5rqk4l7tesk" path="res://Objects/Player/objPlayer.tscn" id="3_se3c0"]
[ext_resource type="AudioStream" uid="uid://sv7khpx6shdk" path="res://Audio/Music/Neos/But it came out in 2007 template.ogg" id="3_ugyxa"]
[ext_resource type="PackedScene" uid="uid://bcyhd8mnaxa6m" path="res://Objects/Neos/RaceCountdown.tscn" id="6_uk3dt"]
[ext_resource type="PackedScene" uid="uid://035mv16jo7nf" path="res://Objects/Room_objects/objWarpNextStage.tscn" id="6_wferm"]
[ext_resource type="PackedScene" uid="uid://da1qaif83tf17" path="res://Objects/Trigger_system/objTrigger.tscn" id="7_57hx5"]
[ext_resource type="AudioStream" uid="uid://de5ts46bva4ii" path="res://Audio/Sounds/sndBouncyBlock.wav" id="8_i0ie1"]
[ext_resource type="PackedScene" uid="uid://b5sj3k4pn1mvu" path="res://Rooms/rPenaltyFake.tscn" id="9_t4cjx"]
[ext_resource type="PackedScene" uid="uid://bjvw2gfnahdw4" path="res://Objects/Neos/obj_lancia.tscn" id="11_khe5k"]
[ext_resource type="PackedScene" uid="uid://bes18loo3v73l" path="res://Objects/Room_objects/objSaveBlocker.tscn" id="12_5u8u2"]
[ext_resource type="AudioStream" uid="uid://xqaw3ttrcuv5" path="res://Audio/Sounds/Neos/Brain fart.wav" id="12_8mf5v"]
[ext_resource type="PackedScene" uid="uid://b40gwarhjqfte" path="res://Objects/Neos/objCarBarrierWeakness.tscn" id="15_d2wtg"]

[node name="rLevel1" type="Node2D"]
script = ExtResource("1_0xwcg")

[node name="Environment" type="Node2D" parent="."]

[node name="objMusicPlayer" parent="Environment" instance=ExtResource("1_i2umm")]
position = Vector2(-16, 16)
song_id = ExtResource("3_ugyxa")

[node name="til32x32" parent="Environment" instance=ExtResource("2_hd0ie")]
rendering_quadrant_size = 32
layer_0/tile_data = PackedInt32Array(1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179670, 0, 0, 1179671, 0, 0, 1179648, 0, 0, 1179672, 0, 0, 917528, 65536, 0, 851992, 65536, 0, 786456, 0, 0, 1179673, 0, 0, 1179674, 0, 0, 1179675, 0, 0, 1179676, 0, 0, 1179677, 0, 0, 1179678, 0, 0, 1179679, 0, 0, 1179680, 0, 0, 1179681, 0, 0, 917529, 65536, 0, 917530, 65536, 0, 917531, 65536, 0, 917532, 65536, 0, 917533, 65536, 0, 917534, 65536, 0, 917535, 65536, 0, 917536, 65536, 0, 917537, 65536, 0, 852001, 65536, 0, 852002, 65536, 0, 852003, 65536, 0, 786467, 65536, 0, 1179685, 0, 0, 1179686, 0, 0, 1179689, 0, 0, 1179691, 0, 0, 1179694, 0, 0, 1179695, 0, 0, 1179696, 0, 0, 1179697, 0, 0, 1179698, 0, 0, 1179699, 0, 0, 1179700, 0, 0, 1179701, 0, 0, 1179702, 0, 0, 1179703, 0, 0, 1179704, 0, 0, 1179712, 0, 0, 1179713, 0, 0, 1179714, 0, 0, 786457, 0, 0, 786458, 65536, 0, 720923, 0, 0, 720924, 0, 0, 655389, 0, 0, 655390, 0, 0, 655391, 0, 0, 655392, 0, 0, 655393, 0, 0, 655394, 0, 0, 720931, 65536, 0, 655395, 0, 0, 720930, 65536, 0, 720929, 65536, 0, 720928, 65536, 0, 720927, 65536, 0, 720926, 65536, 0, 786461, 65536, 0, 786460, 65536, 0, 786459, 65536, 0, 851995, 65536, 0, 851994, 65536, 0, 851993, 65536, 0, 851999, 65536, 0, 851998, 65536, 0, 851997, 65536, 0, 851996, 65536, 0, 786463, 65536, 0, 786464, 65536, 0, 786465, 65536, 0, 786466, 65536, 0, 852000, 65536, 0, 786462, 65536, 0, 720925, 65536, 0, 917522, 0, 0, 851989, 0, 0, 917525, 65536, 0, 1179669, 0, 0, 1179683, 0, 0, 1179684, 0, 0, 1179687, 0, 0, 1179688, 0, 0, 1179690, 0, 0, 1179692, 0, 0, 1179693, 0, 0, 1179682, 0, 0, 589865, 0, 0, 524330, 0, 0, 524331, 0, 0, 524332, 0, 0, 524333, 0, 0, 524334, 0, 0, 458798, 0, 0, 458799, 0, 0, 393264, 0, 0, 393265, 0, 0, 393266, 0, 0, 458803, 0, 0, 458804, 0, 0, 458805, 0, 0, 458806, 0, 0, 524342, 0, 0, 524343, 0, 0, 589880, 0, 0, 720960, 0, 0, 720961, 0, 0, 786498, 0, 0, 786499, 0, 0, 720963, 0, 0, 720964, 0, 0, 458818, 0, 0, 393281, 0, 0, 393280, 0, 0, 393279, 0, 0, 327743, 0, 0, 262207, 0, 0, 196671, 0, 0, 131135, 0, 0, 65599, 0, 0, 63, 0, 0, 131142, 0, 0, 131143, 0, 0, 131144, 0, 0, 196680, 0, 0, 196681, 0, 0, 262217, 0, 0, 327754, 0, 0, 393291, 0, 0, 393292, 0, 0, 458828, 0, 0, 458829, 0, 0, 524366, 0, 0, 589902, 0, 0, 524372, 0, 0, 524373, 0, 0, 524374, 0, 0, 524375, 0, 0, 524376, 0, 0, 458841, 0, 0, 393306, 0, 0, 720996, 0, 0, 720997, 0, 0, 720998, 0, 0, 720999, 0, 0, 720995, 0, 0, 720994, 0, 0, 95, 0, 0, 65631, 0, 0, 131167, 0, 0, 196703, 0, 0, 262239, 0, 0, 327775, 0, 0, 393311, 0, 0, 458847, 0, 0, 524383, 0, 0, 589919, 0, 0, 1179705, 0, 0, 1179706, 0, 0, 1179707, 0, 0, 1179708, 0, 0, 1179709, 0, 0, 1179711, 0, 0, 1179710, 0, 0, 1179715, 0, 0, 1179716, 0, 0, 1179717, 0, 0, 1179718, 0, 0, 1179719, 0, 0, 1179720, 0, 0, 1179721, 0, 0, 1179722, 0, 0, 1179723, 0, 0, 1179724, 0, 0, 1179725, 0, 0, 1179726, 0, 0, 1179727, 0, 0, 1179728, 0, 0, 1179729, 0, 0, 1179730, 0, 0, 1179731, 0, 0, 1179732, 0, 0, 1179733, 0, 0, 1179734, 0, 0, 1179735, 0, 0, 1179736, 0, 0, 1179737, 0, 0, 1179738, 0, 0, 1179739, 0, 0, 1179740, 0, 0, 1179741, 0, 0, 1179742, 0, 0, 1179743, 0, 0, 1179744, 0, 0, 1179745, 0, 0, 1179746, 0, 0, 1179747, 0, 0, 1179748, 0, 0, 1179749, 0, 0, 1179750, 0, 0, 1179751, 0, 0, 1179752, 0, 0, 1179753, 0, 0, 458856, 0, 0, 458857, 0, 0, 458858, 0, 0, 131175, 0, 0, 65639, 0, 0, 103, 0, 0, 1179754, 0, 0, 1179755, 0, 0, 1179756, 0, 0, 1179757, 0, 0, 1179758, 0, 0, 1179759, 0, 0, 1179760, 0, 0, 1179761, 0, 0, 1179762, 0, 0, 1179763, 0, 0, 1179764, 0, 0, 1179765, 0, 0, 1179766, 0, 0, 1179767, 0, 0, 1179768, 0, 0, 1179769, 0, 0, 852063, 0, 0, 852062, 0, 0, 852061, 0, 0, 327771, 0, 0, 327770, 0, 0, 393305, 0, 0, 458840, 0, 0, 589915, 0, 0, 589916, 0, 0, 589917, 0, 0, 589918, 0, 0, 655458, 0, 0, 655463, 0, 0, 196712, 0, 0, 196711, 0, 0, 1114229, 65536, 1, 1048693, 65536, 1, 983157, 65536, 1, 917621, 65536, 1, 852085, 65536, 1)

[node name="objPlayer" parent="Environment" instance=ExtResource("3_se3c0")]
position = Vector2(398, 516)

[node name="Room_related" type="Node2D" parent="."]

[node name="objCameraFixed" parent="Room_related" node_paths=PackedStringArray("target_node") instance=ExtResource("2_33lai")]
position = Vector2(-16, 48)
target_node = NodePath("../../Environment/objPlayer")

[node name="objWarpStage1" parent="Room_related" instance=ExtResource("6_wferm")]
position = Vector2(144, 544)
warp_to = "res://Rooms/01_Testing_rooms/rTestRoom01.tscn"
next_stage_number = 4

[node name="objWarpStage2" parent="Room_related" instance=ExtResource("6_wferm")]
position = Vector2(200, 504)
warp_to = "res://Rooms/01_Testing_rooms/rTestRoom02.tscn"
next_stage_number = 2

[node name="objWarpStage0" parent="Room_related" instance=ExtResource("6_wferm")]
position = Vector2(247, 464)
warp_to = "res://Rooms/01_Testing_rooms/rTestRoom03.tscn"
next_stage_number = 3

[node name="Gimmicks" type="Node2D" parent="."]

[node name="Hazards" type="Node2D" parent="."]

[node name="Trigger_related" type="Node2D" parent="."]

[node name="RaceCountdown" parent="Trigger_related" node_paths=PackedStringArray("target_instance_zoom") instance=ExtResource("6_uk3dt")]
target_instance_zoom = NodePath("../../Environment/objMusicPlayer")
trigger_id = 4

[node name="objTrigger" parent="Trigger_related" instance=ExtResource("7_57hx5")]
position = Vector2(384, 469)
trigger_id = 4
trigger_sound = ExtResource("8_i0ie1")

[node name="objTrigger2" parent="Trigger_related" instance=ExtResource("7_57hx5")]
position = Vector2(672, 600)
scale = Vector2(25, 6.9545)
trigger_id = 2

[node name="PenaltyTrapRoom" parent="Trigger_related" node_paths=PackedStringArray("camera_main_scene") instance=ExtResource("9_t4cjx")]
position = Vector2(0, 608)
trigger_id = 2
camera_main_scene = NodePath("../../Room_related/objCameraFixed")

[node name="objTrigger3" parent="Trigger_related" instance=ExtResource("7_57hx5")]
position = Vector2(3328, 168)
trigger_id = 10
trigger_sound = ExtResource("12_8mf5v")

[node name="objLancia" parent="." instance=ExtResource("11_khe5k")]
position = Vector2(-32, 447)
speed = 120.0

[node name="Hitbox" parent="objLancia" index="1"]
position = Vector2(8, 56)

[node name="CollisionBlock" parent="objLancia/BlockDetection" index="0"]
position = Vector2(348, 84)

[node name="objSaveBlocker" parent="." instance=ExtResource("12_5u8u2")]
position = Vector2(4000, 672)

[node name="CarBarrierWeak" parent="." instance=ExtResource("15_d2wtg")]
position = Vector2(3744, 608)
trigger_id = 10
target_position = Vector2(0, -192)

[connection signal="change_camera_focus" from="Trigger_related/RaceCountdown" to="." method="_on_race_countdown_change_camera_focus"]
[connection signal="counter_finished" from="Trigger_related/RaceCountdown" to="." method="_on_race_countdown_counter_finished"]
[connection signal="race_started" from="Trigger_related/RaceCountdown" to="." method="_on_race_countdown_race_started"]

[editable path="objLancia"]
